fix(SILVA-570): fixing backend issues for recent openings