@@ -1,14 +1,17 @@
 package ca.bc.gov.restapi.results.postgres.service;
 
+import ca.bc.gov.restapi.results.common.exception.OpeningNotFoundException;
 import ca.bc.gov.restapi.results.common.pagination.PaginatedResult;
 import ca.bc.gov.restapi.results.common.pagination.PaginationParameters;
 import ca.bc.gov.restapi.results.common.security.LoggedUserService;
 import ca.bc.gov.restapi.results.oracle.dto.OpeningSearchFiltersDto;
 import ca.bc.gov.restapi.results.oracle.dto.OpeningSearchResponseDto;
+import ca.bc.gov.restapi.results.oracle.repository.OpeningRepository;
 import ca.bc.gov.restapi.results.oracle.service.OpeningService;
 import ca.bc.gov.restapi.results.postgres.dto.UserRecentOpeningDto;
 import ca.bc.gov.restapi.results.postgres.entity.UserRecentOpeningEntity;
 import ca.bc.gov.restapi.results.postgres.repository.UserRecentOpeningRepository;
+import jakarta.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -30,37 +33,35 @@ public class UserRecentOpeningService {
     private final LoggedUserService loggedUserService;
     private final UserRecentOpeningRepository userRecentOpeningRepository;
     private final OpeningService openingService;
+    private final OpeningRepository openingRepository;
 
-    /**
-     * Stores the opening viewed by the user and returns the DTO.
-     *
-     * @param openingId The ID of the opening viewed by the user.
-     * @return A DTO with userId, openingId, and lastViewed timestamp.
-     */
-    public UserRecentOpeningDto storeViewedOpening(String openingId) {
-        String userId = loggedUserService.getLoggedUserId();
+    @Transactional
+    public UserRecentOpeningDto storeViewedOpening(Long openingId) {
+        log.info("Adding opening ID {} as recently viewed for user {}", openingId,
+            loggedUserService.getLoggedUserId());
+
+        if (openingRepository.findById(openingId).isEmpty()) {
+            log.info("Opening ID not found: {}", openingId);
+            throw new OpeningNotFoundException();
+        }
+
         LocalDateTime lastViewed = LocalDateTime.now();
-        
-        // Verify that the openingId String contains numbers only and no spaces
-        if (!openingId.matches("^[0-9]*$")) {
-            throw new IllegalArgumentException("Opening ID must contain numbers only!");
-        }
 
-        // Check if the user has already viewed this opening
-        UserRecentOpeningEntity existingEntity = userRecentOpeningRepository.findByUserIdAndOpeningId(userId, openingId);
-        
-        if (existingEntity != null) {
-            // Update the last viewed timestamp for the existing record
-            existingEntity.setLastViewed(lastViewed);
-            userRecentOpeningRepository.save(existingEntity);  // Save the updated entity
-        } else {
-            // Create a new entity if this openingId is being viewed for the first time
-            UserRecentOpeningEntity newEntity = new UserRecentOpeningEntity(null, userId, openingId, lastViewed);
-            userRecentOpeningRepository.save(newEntity);  // Save the new entity
-        }
+        userRecentOpeningRepository.saveAndFlush(
+        userRecentOpeningRepository
+            .findByUserIdAndOpeningId(loggedUserService.getLoggedUserId(), openingId)
+            .map(entity -> entity.withLastViewed(lastViewed))
+            .orElse(
+                new UserRecentOpeningEntity(null,loggedUserService.getLoggedUserId(),openingId,lastViewed)
+            )
+        );
     
         // Return the DTO
-        return new UserRecentOpeningDto(userId, openingId, lastViewed);
+        return new UserRecentOpeningDto(
+            loggedUserService.getLoggedUserId(),
+            openingId,
+            lastViewed
+        );
     }
 
     /**
@@ -78,7 +79,7 @@ public class UserRecentOpeningService {
                 .findByUserIdOrderByLastViewedDesc(userId, pageable);
     
         // Extract opening IDs as String
-        Map<String, LocalDateTime> openingIds = recentOpenings.getContent().stream()
+        Map<Long, LocalDateTime> openingIds = recentOpenings.getContent().stream()
                 .collect(Collectors.toMap(UserRecentOpeningEntity::getOpeningId, UserRecentOpeningEntity::getLastViewed));
         log.info("User with the userId {} has the following openingIds {}", userId, openingIds);
     
@@ -100,9 +101,9 @@ public class UserRecentOpeningService {
                 pageResult
                     .getData()
                     .stream()
-                    .peek(result -> result.setLastViewDate(openingIds.get(result.getOpeningId().toString())))
+                    .map(result -> result.withLastViewDate(openingIds.get(result.getOpeningId().longValue())))
                     .sorted(Comparator.comparing(OpeningSearchResponseDto::getLastViewDate).reversed())
-                    .collect(Collectors.toList())
+                    .toList()
             );
     }
     
